added some comments to sort css and js in the html at a later date

--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Meta Information -->
     <meta charset="utf-8">
     <title>FastLane</title>
+    <!-- External CSS -->
+
+    <!-- App CSS -->
+
+    <!-- External JS -->
+
+    <!-- App JS -->
+
   </head>
   <body>
     <h2>Hello World</h2>
