--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <h2>Hello World</h2>
-    <form class="question" action="/" method="post">
+    <form class="question" action="/poll" method="post">
       <textarea type="text" placeholder="Write question here"></textarea>
       <input type="submit" name="" value="Ask Question">
     </form>
