--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,11 @@
       crossorigin="anonymous"
     />
     <!-- App CSS -->
+    <link
+      href="https://fonts.googleapis.com/css?family=Raleway:300i,700i"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./styles/layout.scss" type="text/css" />
 
     <!-- External JS -->
 
@@ -19,7 +24,7 @@
   </head>
   <body>
     <!-- Nav bar fixed -->
-    <nav class="navbar navbar-dark bg-dark">
+    <nav id="navbar" class="navbar navbar-dark bg-dark">
       <button
         class="navbar-toggler"
         type="button"
