remove action/method on submit

--- a/public/index.html
+++ b/public/index.html
@@ -49,7 +49,7 @@
     </div>
   </nav>
   <!-- main body starts here -->
-  <form class="question" action="/poll" method="post">
+  <form class="question">
     <textarea name="question" type="text" placeholder="Whats the question homie?" class="form-control" id="exampleFormControlTextarea1"
       rows="3"></textarea>
 
