--- a/public/index.html
+++ b/public/index.html
@@ -10,10 +10,7 @@
     crossorigin="anonymous" />
   <!-- App CSS -->
   <link href="https://fonts.googleapis.com/css?family=Raleway:300i,700i" rel="stylesheet" />
-  <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
-  <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
-  <link rel="stylesheet" href="/styles/question.css" type="text/css" />
-
+  <link rel="stylesheet" href="/styles/main.css" type="text/css" />
   <!-- External JS -->
 
   <!-- App JS -->
