reorganised the css and scss files and centered question form

--- a/public/index.html
+++ b/public/index.html
@@ -48,13 +48,15 @@
     </div>
   </nav>
   <!-- main body starts here -->
-  <form class="question">
-    <textarea name="question" type="text" placeholder="Whats the question homie?" class="form-control" rows="3"></textarea>
+  <main>
+    <form class="question">
+      <textarea name="question" type="text" placeholder="Whats the question homie?" class="form-control hello" rows="3"></textarea>
 
-    <button type="submit" class="btn btn-info">
-      Search
-    </button>
-  </form>
+      <button type="submit" class="btn btn-info">
+        Search
+      </button>
+    </form>
+  </main>
   <!-- Bootstrap JS-->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
     crossorigin="anonymous"></script>
