pull admin data with ajax

--- a/public/index.html
+++ b/public/index.html
@@ -59,11 +59,11 @@
   <form class="question">
     <textarea name="question" type="text" placeholder="Whats the question homie?" class="form-control" id="exampleFormControlTextarea1"
       rows="3"></textarea>
-
     <button type="submit" class="btn btn-info">
       Search
     </button>
   </form>
+  <button class="test">test</button>
   <!-- Bootstrap JS-->
 
 </body>
