HTML tag for options container

--- a/public/index.html
+++ b/public/index.html
@@ -56,16 +56,17 @@
     </div>
   </nav>
   <!-- main body starts here -->
-  <form class="question">
-    <textarea name="question" type="text" placeholder="Whats the question homie?" class="form-control" id="exampleFormControlTextarea1"
-      rows="3"></textarea>
-    <button type="submit" class="btn btn-info">
-      Search
-    </button>
-  </form>
-  <button class="test">test</button>
-  <!-- Bootstrap JS-->
-
+  <main class="container">
+    <form class="question">
+      <textarea name="question" type="text" placeholder="Whats the question homie?" class="form-control" id="exampleFormControlTextarea1"
+        rows="3"></textarea>
+      <button type="submit" class="btn btn-info">
+        Search
+      </button>
+    </form>
+    <button class="test">test</button>
+    <section class="option-container"></section>
+  </main>
 </body>
 
 </html>
