reroutes from server side

--- a/public/index.html
+++ b/public/index.html
@@ -60,7 +60,7 @@
       <textarea name="question" type="text" placeholder="Whats the question homie?" class="form-control" id="exampleFormControlTextarea1"
         rows="3"></textarea>
       <button type="submit" class="btn btn-info">
-        Search
+        Ask
       </button>
     </form>
     <input type="email">
